Custom build configuration names
You can choose a custom name for the build configurations.

--- a/options.html
+++ b/options.html
@@ -1,6 +1,5 @@
 <html>
 <head><title>Team City Settings</title></head>
-
 <body>
 
 Team City host:
@@ -12,10 +11,13 @@ Team City username:
 Team City password:
 <input id="password" type="password"></input>
 <br>
+<div id="listBuildTypeId">asdsad</div>
 <div id="status"></div>
+<div id="serverStatus"></div>
 <button id="save">Save</button>
 </body>
 
+<script src="teamCityAlert.js"></script>
 <script src="options.js"></script>
 
 </html>
